--- a/src/backend/dockerfile
+++ b/src/backend/dockerfile
@@ -1,7 +1,11 @@
-# Use an official Python runtime as a parent image
+# Use an official Python runtime as the parent image
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Set the working directory in the container to /app
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
@@ -10,11 +14,8 @@ COPY . /app
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port available to the world outside this container
+# Make port 8000 available to the world outside this container
 EXPOSE 8000
 
-# Define environment variable
-ENV NAME World
-
-# Run app.py when the container launches
+# Command to run the Django development server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
