--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -31,7 +31,8 @@ services:
 
   db:
     image: postgres:13
-    ports: "5433:5432"
+    ports: 
+      - "5433:5432"
     environment:
       POSTGRES_PASSWORD: flcb456ivx
     volumes:
