--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,5 +1,4 @@
-Django==3.2.8
-djangorestframework==3.12.4
-psycopg2-binary==2.9.1
+Flask==2.0.1
 gunicorn==20.1.0
-dj-database-url==0.5.0
+psycopg2-binary==2.9.1
+requests==2.25.1
