--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,21 +1,7 @@
-# Use an official Python runtime as a parent image
-FROM python:3.9-slim
-
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# Set the working directory in the container
-WORKDIR /app
-
-# Copy the current directory contents into the container at /app
-COPY . /app
-
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Make port 8000 available to the world outside this container
-EXPOSE 8000
-
-# Command to run the Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+Django==3.2.8
+djangorestframework==3.12.4
+django-cors-headers==3.7.0
+django-allauth==0.44.0
+psycopg2-binary==2.9.1
+Pillow==8.3.1
+django-environ==0.4.5
