--- a/src/backend/dockerfile
+++ b/src/backend/dockerfile
@@ -1,21 +1,27 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Set environment variables
+# Set environment variables to ensure Python outputs all logs to the terminal without buffering
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# Set the working directory in the container
+# Set the working directory in the container to /app
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . /app
+# Copy the requirements file into the container at /app
+COPY requirements.txt /app/
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of your application's code into the container at /app
+COPY . /app/
+
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
-# Command to run the Django development server
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Define the command to run your application
+# This can be a gunicorn command for production or the Django development server for development
+CMD ["gunicorn", "myproject.wsgi:application", "--bind", "0.0.0.0:8000"]
+# For development, you might use:
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
