Update docker-compose files for development environment

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,17 +3,17 @@ version: '3.8'
 services:
   backend:
     image: backend:latest
-    build: ./src/backend
+    build: ./backend
     ports:
       - "8000:8000"
     environment:
-      - DJANGO_SETTINGS_MODULE=myproject.settings
+      - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
     networks:
       - app-network
 
   frontend:
     image: frontend:latest
-    build: ./src/frontend
+    build: ./frontend
     ports:
       - "3000:3000"
     networks:
@@ -22,6 +22,3 @@ services:
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  postgres_data:
