--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,42 +1,37 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  app:
-    entrypoint:
-      - sleep
-      - infinity
-    image: docker/dev-environments-default:stable-1
-    init: true
-    volumes:
-      - type: bind
-        source: /var/run/docker.sock
-        target: /var/run/docker.sock
-
   backend:
-    build: ./src/backend
-    ports:
-      - "8000:8000"
+    environment:
+      - DEBUG=${DEBUG}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
     volumes:
       - ./backend:/app
-    environment:
-      - DATABASE_URL=postgres://postgres:flcb456ivx@db:5432/postgres
+    command: python manage.py runserver 0.0.0.0:8000
 
   frontend:
-    build: ./src/frontend
-    ports:
-      - "3000:3000"
+    environment:
+      - NODE_ENV=${NODE_ENV}
     volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./frontend/src:/usr/src/app/src
+      - ./frontend/public:/usr/src/app/public
+    command: npm start
 
   db:
-    image: postgres:13
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_PASSWORD: flcb456ivx
+    image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
+    driver: bridge
